[metadata]
name = kyanitapi
description = Python API for Kyanit
url = https://github.com/kyanit-project/kyanitapi
author = Zsolt Nagy
author_email = zsolt@kyanit.eu
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Developers
    Operating System :: Unix

[options]
packages = kyanitapi
install_requires =
  psutil>=5,<6
  pythonping>=1,<2
  requests>=2,<3
python_requires = ~=3.8

[bdist_wheel]
universal = True
